--- a/main.yml
+++ b/main.yml
@@ -20,6 +20,8 @@
     - role: geerlingguy.mas
       when: mas_installed_apps
       tags: ['mas']
+    - role: gantsign.visual-studio-code-extensions
+      tags: ['vscode']
 
   tasks:
     - include: tasks/ansible-setup.yml
