--- a/default.config.yml
+++ b/default.config.yml
@@ -37,6 +37,9 @@ homebrew_installed_packages:
   - pv
   - wget
   - wrk
+  - maven
+  - sbt
+
 
 homebrew_taps:
   - homebrew/core
@@ -66,6 +69,10 @@ homebrew_cask_apps:
   - anki
   - calibre
   - vlc
+  - jetbrains-toolbox
+  - chefdk
+  - telegram
+  - appcleaner
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps: []
@@ -105,6 +112,14 @@ users:
       - foxundermoon.shell-format
     # visual_studio_code_extensions_absent:
     #   - seanmcbreen.Spell
+
+oh_my_zsh_git_repository: "https://github.com/robbyrussell/oh-my-zsh.git"
+zsh_users:
+  -
+    user: a.mazurov
+    group: admin
+    settings: []
+  
 
 # Glob pattern to ansible task files to run after all other tasks are finished.
 post_provision_tasks: []
